--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -4,7 +4,7 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>professor @ViewData["Professor"]</p>
+<p>Aprendiz: @ViewData["Aluno"]</p>
 
 <address>
     <strong>More information: </strong><a href="http:\\educandoweb.com.br">educandoweb.com.br</a>
